# RAG_app

./: .gitignore  app.py  create_database.py  main.py  pyproject.toml  requirements.txt
chroma_db/5e9e8a1c-3e3a-4251-b9d9-23f5b1e3f5ad/: index_metadata.pickle
document_loaders/: pdf.py  text.py  web_page.py
retrievers/: mmr.py  multi_query.py
retrievers/mmr_db/: chroma.sqlite3
vector_store/: DB.py
