[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
]
